fixed vertical alignment of forms at 1920px

--- a/frontend/web/min/mystyle.css
+++ b/frontend/web/min/mystyle.css
@@ -453,10 +453,6 @@ iframe{max-width:100%}
         display: none;
     }
 
-    /* .history-panels__fixed {
-        position: relative;
-    } */
-
     .history-panels__inner {
         display: flex;
         justify-content: space-between;
@@ -470,7 +466,6 @@ iframe{max-width:100%}
         position: relative;
         width: 30%;
         max-width: 390px;
-        margin-left: 25px;
     }
 
     .bg-form__fixed {
@@ -482,7 +477,15 @@ iframe{max-width:100%}
         background: transparent;
         border: 1px solid #B7D3F7;
         border-radius: 15px;  
+        width: 100%;
+        max-width: 390px;
+        /* margin-left: 25px; */
     }
+}
+
+.blog-more__width {
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 .single__blog-inner {
